qt/gen_qinputdialog.h

class QInputDialog;
class QMetaObject;
class QSize;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputDialog QInputDialog;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QInputDialog_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QInputDialog_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QInputDialog_override_virtual_dropEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QInputDialog_override_virtual_hideEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QInputDialog_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QInputDialog_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QInputDialog_override_virtual_changeEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_changeEvent(void* self, QEvent* param1);
bool QInputDialog_override_virtual_metric(void* self, intptr_t slot);
int QInputDialog_virtualbase_metric(const void* self, int param1);
bool QInputDialog_override_virtual_initPainter(void* self, intptr_t slot);
void QInputDialog_virtualbase_initPainter(const void* self, QPainter* painter);
bool QInputDialog_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QInputDialog_virtualbase_redirected(const void* self, QPoint* offset);
bool QInputDialog_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QInputDialog_virtualbase_sharedPainter(const void* self);
bool QInputDialog_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QInputDialog_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QInputDialog_virtualbase_inputMethodQuery(const void* self, int param1);
bool QInputDialog_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QInputDialog_virtualbase_focusNextPrevChild(void* self, bool next);
bool QInputDialog_override_virtual_timerEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QInputDialog_override_virtual_childEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_childEvent(void* self, QChildEvent* event);
bool QInputDialog_override_virtual_customEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_customEvent(void* self, QEvent* event);
bool QInputDialog_override_virtual_connectNotify(void* self, intptr_t slot);
void QInputDialog_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QInputDialog_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QInputDialog_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QInputDialog_staticMetaObject();
void QInputDialog_delete(QInputDialog* self);