qt/gen_qinputdialog.nim

proc fQInputDialog_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dragMoveEvent".}
proc fcQInputDialog_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dragMoveEvent".}
proc fQInputDialog_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dragLeaveEvent".}
proc fcQInputDialog_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dragLeaveEvent".}
proc fQInputDialog_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_dropEvent".}
proc fcQInputDialog_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_dropEvent".}
proc fQInputDialog_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_hideEvent".}
proc fcQInputDialog_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_hideEvent".}
proc fQInputDialog_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QInputDialog_virtualbase_nativeEvent".}
proc fcQInputDialog_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_nativeEvent".}
proc fQInputDialog_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_changeEvent".}
proc fcQInputDialog_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_changeEvent".}
proc fQInputDialog_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QInputDialog_virtualbase_metric".}
proc fcQInputDialog_override_virtual_metric(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_metric".}
proc fQInputDialog_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QInputDialog_virtualbase_initPainter".}
proc fcQInputDialog_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_initPainter".}
proc fQInputDialog_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QInputDialog_virtualbase_redirected".}
proc fcQInputDialog_override_virtual_redirected(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_redirected".}
proc fQInputDialog_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QInputDialog_virtualbase_sharedPainter".}
proc fcQInputDialog_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_sharedPainter".}
proc fQInputDialog_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_inputMethodEvent".}
proc fcQInputDialog_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_inputMethodEvent".}
proc fQInputDialog_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QInputDialog_virtualbase_inputMethodQuery".}
proc fcQInputDialog_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_inputMethodQuery".}
proc fQInputDialog_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QInputDialog_virtualbase_focusNextPrevChild".}
proc fcQInputDialog_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_focusNextPrevChild".}
proc fQInputDialog_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_timerEvent".}
proc fcQInputDialog_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_timerEvent".}
proc fQInputDialog_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_childEvent".}
proc fcQInputDialog_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_childEvent".}
proc fQInputDialog_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_customEvent".}
proc fcQInputDialog_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_customEvent".}
proc fQInputDialog_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QInputDialog_virtualbase_connectNotify".}
proc fcQInputDialog_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_connectNotify".}
proc fQInputDialog_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QInputDialog_virtualbase_disconnectNotify".}
proc fcQInputDialog_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_disconnectNotify".}
proc fcQInputDialog_staticMetaObject(): pointer {.importc: "QInputDialog_staticMetaObject".}
proc fcQInputDialog_delete(self: pointer) {.importc: "QInputDialog_delete".}


func init*(T: type QInputDialog, h: ptr cQInputDialog): QInputDialog =
  T(h: h)
proc create*(T: type QInputDialog, parent: gen_qwidget.QWidget): QInputDialog =

  QInputDialog.init(fcQInputDialog_new(parent.h))
proc create*(T: type QInputDialog, ): QInputDialog =

  QInputDialog.init(fcQInputDialog_new2())
proc create*(T: type QInputDialog, parent: gen_qwidget.QWidget, flags: gen_qnamespace.WindowType): QInputDialog =

  QInputDialog.init(fcQInputDialog_new3(parent.h, cint(flags)))
proc metaObject*(self: QInputDialog, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQInputDialog_metaObject(self.h))

proc metacast*(self: QInputDialog, param1: cstring): pointer =

  fcQInputDialog_metacast(self.h, param1)

proc metacall*(self: QInputDialog, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQInputDialog_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QInputDialog, s: cstring): string =

  let v_ms = fcQInputDialog_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QInputDialog, s: cstring): string =

  let v_ms = fcQInputDialog_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setInputMode*(self: QInputDialog, mode: QInputDialogInputMode): void =

  fcQInputDialog_setInputMode(self.h, cint(mode))

proc inputMode*(self: QInputDialog, ): QInputDialogInputMode =

  QInputDialogInputMode(fcQInputDialog_inputMode(self.h))

proc setLabelText*(self: QInputDialog, text: string): void =

  fcQInputDialog_setLabelText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc labelText*(self: QInputDialog, ): string =

  let v_ms = fcQInputDialog_labelText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setOption*(self: QInputDialog, option: QInputDialogInputDialogOption): void =

  fcQInputDialog_setOption(self.h, cint(option))

proc testOption*(self: QInputDialog, option: QInputDialogInputDialogOption): bool =

  fcQInputDialog_testOption(self.h, cint(option))

proc setOptions*(self: QInputDialog, options: QInputDialogInputDialogOption): void =

  fcQInputDialog_setOptions(self.h, cint(options))

proc options*(self: QInputDialog, ): QInputDialogInputDialogOption =

  QInputDialogInputDialogOption(fcQInputDialog_options(self.h))

proc setTextValue*(self: QInputDialog, text: string): void =

  fcQInputDialog_setTextValue(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc textValue*(self: QInputDialog, ): string =

  let v_ms = fcQInputDialog_textValue(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTextEchoMode*(self: QInputDialog, mode: gen_qlineedit.QLineEditEchoMode): void =

  fcQInputDialog_setTextEchoMode(self.h, cint(mode))

proc textEchoMode*(self: QInputDialog, ): gen_qlineedit.QLineEditEchoMode =

  gen_qlineedit.QLineEditEchoMode(fcQInputDialog_textEchoMode(self.h))

proc setComboBoxEditable*(self: QInputDialog, editable: bool): void =

  fcQInputDialog_setComboBoxEditable(self.h, editable)

proc isComboBoxEditable*(self: QInputDialog, ): bool =

  fcQInputDialog_isComboBoxEditable(self.h)

proc setComboBoxItems*(self: QInputDialog, items: seq[string]): void =

  var items_CArray = newSeq[struct_miqt_string](len(items))
  for i in 0..<len(items):
    items_CArray[i] = struct_miqt_string(data: items[i], len: csize_t(len(items[i])))

  fcQInputDialog_setComboBoxItems(self.h, struct_miqt_array(len: csize_t(len(items)), data: if len(items) == 0: nil else: addr(items_CArray[0])))

proc comboBoxItems*(self: QInputDialog, ): seq[string] =

  var v_ma = fcQInputDialog_comboBoxItems(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc setIntValue*(self: QInputDialog, value: cint): void =

  fcQInputDialog_setIntValue(self.h, value)

proc intValue*(self: QInputDialog, ): cint =

  fcQInputDialog_intValue(self.h)

proc setIntMinimum*(self: QInputDialog, min: cint): void =

  fcQInputDialog_setIntMinimum(self.h, min)

proc intMinimum*(self: QInputDialog, ): cint =

  fcQInputDialog_intMinimum(self.h)

proc setIntMaximum*(self: QInputDialog, max: cint): void =

  fcQInputDialog_setIntMaximum(self.h, max)

proc intMaximum*(self: QInputDialog, ): cint =

  fcQInputDialog_intMaximum(self.h)

proc setIntRange*(self: QInputDialog, min: cint, max: cint): void =

  fcQInputDialog_setIntRange(self.h, min, max)

proc setIntStep*(self: QInputDialog, step: cint): void =

  fcQInputDialog_setIntStep(self.h, step)

proc intStep*(self: QInputDialog, ): cint =

  fcQInputDialog_intStep(self.h)

proc setDoubleValue*(self: QInputDialog, value: float64): void =

  fcQInputDialog_setDoubleValue(self.h, value)

proc doubleValue*(self: QInputDialog, ): float64 =

  fcQInputDialog_doubleValue(self.h)

proc setDoubleMinimum*(self: QInputDialog, min: float64): void =

  fcQInputDialog_setDoubleMinimum(self.h, min)

proc doubleMinimum*(self: QInputDialog, ): float64 =

  fcQInputDialog_doubleMinimum(self.h)

proc setDoubleMaximum*(self: QInputDialog, max: float64): void =

  fcQInputDialog_setDoubleMaximum(self.h, max)

proc doubleMaximum*(self: QInputDialog, ): float64 =

  fcQInputDialog_doubleMaximum(self.h)

proc setDoubleRange*(self: QInputDialog, min: float64, max: float64): void =

  fcQInputDialog_setDoubleRange(self.h, min, max)

proc setDoubleDecimals*(self: QInputDialog, decimals: cint): void =

  fcQInputDialog_setDoubleDecimals(self.h, decimals)

proc doubleDecimals*(self: QInputDialog, ): cint =

  fcQInputDialog_doubleDecimals(self.h)

proc setOkButtonText*(self: QInputDialog, text: string): void =

  fcQInputDialog_setOkButtonText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc okButtonText*(self: QInputDialog, ): string =

  let v_ms = fcQInputDialog_okButtonText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCancelButtonText*(self: QInputDialog, text: string): void =

  fcQInputDialog_setCancelButtonText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc cancelButtonText*(self: QInputDialog, ): string =

  let v_ms = fcQInputDialog_cancelButtonText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc minimumSizeHint*(self: QInputDialog, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQInputDialog_minimumSizeHint(self.h))
